<?xml version="1.0" encoding="utf-8"?>
<!--我的-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--本地音乐-->
    <LinearLayout
        android:id="@+id/music_local_music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/music_layout_style"
        android:gravity="center">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@mipmap/my_local_music"
            android:tint="@color/base_red"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/music_style"
                android:text="@string/local_music"/>
        </LinearLayout>
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@mipmap/ic_horn"/>
    </LinearLayout>
    <!--分割线-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F0F0F0"/>

    <!--最近播放-->
    <LinearLayout
        android:id="@+id/recent_music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/music_layout_style"
        android:gravity="center">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@mipmap/my_recent_play"
            android:tint="@color/base_red"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/music_style"
                android:text="@string/recent_play"/>
        </LinearLayout>
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@mipmap/ic_horn"
            android:visibility="invisible"/>
    </LinearLayout>
    <!--分割线-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F0F0F0"/>

    <!--下载管理-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/music_layout_style"
        android:gravity="center">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@mipmap/my_down_manage"
            android:tint="@color/base_red"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/music_style"
                android:text="@string/down_manager"/>
        </LinearLayout>
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@mipmap/ic_horn"
            android:visibility="invisible"/>
    </LinearLayout>
    <!--分割线-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F0F0F0"/>

    <!--我的电台-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/music_layout_style"
        android:gravity="center">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@mipmap/ic_autogetmusic"
            android:tint="@color/base_red"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/music_style"
                android:text="@string/my_tv"/>
        </LinearLayout>
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@mipmap/ic_horn"
            android:visibility="invisible"/>
    </LinearLayout>
    <!--分割线-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F0F0F0"/>

    <!--我的收藏-->
    <LinearLayout
        android:id="@+id/like_music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/music_layout_style"
        android:gravity="center">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@mipmap/my_like"
            android:tint="@color/base_red"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/music_style"
                android:text="@string/my_like"/>
        </LinearLayout>
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@mipmap/ic_horn"
            android:visibility="invisible"/>
    </LinearLayout>
</LinearLayout>
