<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:background="@color/white">

    <!--侧滑栏顶部图片位置-->
    <include
        layout="@layout/nav_header_main"/>
    <!--侧滑栏中间的部分-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <!--我的消息-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/draw_layout"
            android:orientation="horizontal"
            android:gravity="left|center_vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground">
            <ImageView
                style="@style/draw_image_ic_style"
                android:src="@mipmap/ic_message"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/draw_left_font_style"
                android:text="我的消息"/>
        </LinearLayout>

        <!--商城-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/draw_layout"
            android:orientation="horizontal"
            android:gravity="left|center_vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground">
            <ImageView
                style="@style/draw_image_ic_style"
                android:src="@mipmap/ic_market"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/draw_left_font_style"
                android:text="商城"/>
        </LinearLayout>

        <!--在线听歌免流量-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/draw_layout"
            android:orientation="horizontal"
            android:gravity="left|center_vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground">
            <ImageView
                style="@style/draw_image_ic_style"
                android:src="@mipmap/ic_online"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/draw_left_font_style"
                android:text="在线听歌免流量"/>
        </LinearLayout>
        <!--分割线-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="#F0F0F0"/>
        <!--我的好友-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/draw_layout"
            android:orientation="horizontal"
            android:gravity="left|center_vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground">
            <ImageView
                style="@style/draw_image_ic_style"
                android:src="@mipmap/ic_myfriend"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/draw_left_font_style"
                android:text="我的好友"/>
        </LinearLayout>
        <!--附近-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/draw_layout"
            android:orientation="horizontal"
            android:gravity="left|center_vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground">
            <ImageView
                style="@style/draw_image_ic_style"
                android:src="@mipmap/ic_near"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/draw_left_font_style"
                android:text="附近的人"/>
        </LinearLayout>
        <!--分割线-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="#F0F0F0"/>
        <!--个性换肤-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/draw_layout"
            android:orientation="horizontal"
            android:gravity="left|center_vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground">
            <ImageView
                style="@style/draw_image_ic_style"
                android:src="@mipmap/ic_skin"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/draw_left_font_style"
                android:text="个性换肤"/>
        </LinearLayout>

        <!--听歌识曲-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/draw_layout"
            android:orientation="horizontal"
            android:gravity="left|center_vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground">
            <ImageView
                style="@style/draw_image_ic_style"
                android:src="@mipmap/ic_autogetmusic"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/draw_left_font_style"
                android:text="听歌识曲"/>
        </LinearLayout>

        <!--定时停止播放-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/draw_layout"
            android:orientation="horizontal"
            android:gravity="left|center_vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground">
            <ImageView
                style="@style/draw_image_ic_style"
                android:src="@mipmap/ic_ticker"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/draw_left_font_style"
                android:text="定时停止播放"/>
        </LinearLayout>
        <!--音乐闹钟-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/draw_layout"
            android:orientation="horizontal"
            android:gravity="left|center_vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground">
            <ImageView
                style="@style/draw_image_ic_style"
                android:src="@mipmap/ic_alarmmusic"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/draw_left_font_style"
                android:text="音乐闹钟"/>
        </LinearLayout>
        <!--音乐云盘-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/draw_layout"
            android:orientation="horizontal"
            android:gravity="left|center_vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground">
            <ImageView
                style="@style/draw_image_ic_style"
                android:src="@mipmap/ic_cloud"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/draw_left_font_style"
                android:text="音乐云盘"/>
        </LinearLayout>
    </LinearLayout>

    <!--分割线-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F0F0F0"/>
    <!--侧滑栏底部三个按钮-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center">
        <!--夜间模式-->
        <LinearLayout
            android:id="@+id/app_night"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground">
            <ImageView
                style="@style/draw_left_image_ic_style"
                android:src="@mipmap/ic_night"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/draw_left_buttom_font_style"
                android:text="@string/modelnight"/>
        </LinearLayout>
        <!--设置-->
        <LinearLayout
            android:id="@+id/app_setting"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground">
            <ImageView
                style="@style/draw_left_image_ic_style"
                android:src="@mipmap/ic_setting"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/draw_left_buttom_font_style"
                android:text="@string/setting"/>
        </LinearLayout>
        <!--退出-->
        <LinearLayout
            android:id="@+id/app_exit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="right|center_vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground">
            <ImageView
                style="@style/draw_left_image_ic_style"
                android:src="@mipmap/ic_exit"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/draw_left_buttom_font_style"
                android:text="@string/exit"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>